Добавление API точки для добавления товара пользователем системы
