# Modules/Api/Http/Controllers/ItemController.php
@@ -4,6 +4,8 @@ namespace Modules\Api\Http\Controllers;
 
 use App\Http\Controllers\Controller;
 use Illuminate\Http\JsonResponse;
+use Modules\Item\Dto\SaveItemDto;
+use Modules\Item\Requests\StoreItemRequest;
 use Modules\Item\Services\ItemService;
 
 class ItemController extends Controller
@@ -20,31 +22,97 @@ class ItemController extends Controller
         $this->service = $service;
     }
 
-
     /**
      * @OA\Get(
      *     path="/items/all",
-     *     summary="Получение всех существующих товаров.",
+     *     operationId="itemsAll",
+     *     summary="Получение всех существующих товаров с пагинацией",
      *     tags={"Items"},
-     *     @OA\Response(
-     *         response=200,
-     *         description="successful operation",
+     *     @OA\Parameter(
+     *         name="page",
+     *         in="query",
+     *         description="Номер страницы",
+     *         required=false,
      *         @OA\Schema(
-     *             type="array",
-     *             @OA\Items(ref="#/components/schemas/Item")
-     *         ),
+     *             type="integer",
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response="200",
+     *         description="Все хорошо",
      *     ),
      *     @OA\Response(
      *         response="500",
-     *         description=""
+     *         description="Ошибка на стороне сервера"
      *     )
      * )
      */
-    public function getAllItems(): JsonResponse
+    public function get(): JsonResponse
     {
-        return response()->json([
-            'status' => 'success',
-            'items' => $this->service->getAll()
-        ]);
+        return response()->success(null, $this->service->getAll());
+    }
+
+    /**
+     * @OA\Post(
+     *     path="/items/add",
+     *     operationId="itemsAdd",
+     *     summary="Добавление товара авторизированным пользователем",
+     *     tags={"Items"},
+     *    	@OA\RequestBody(
+     *          required=true,
+     *          @OA\MediaType(
+     *              mediaType="multipart/form-data",
+     *              @OA\Schema(
+     *                  @OA\Property(
+     *                      property="title",
+     *                      description="Наименование",
+     *                      type="string",
+     *                   ),
+     *                  @OA\Property(
+     *                      property="cat_id",
+     *                      description="Id категории",
+     *                      type="integer",
+     *                   ),
+     *                  @OA\Property(
+     *                      property="desc",
+     *                      description="Описание",
+     *                      type="string"
+     *                   ),
+     *                  @OA\Property(
+     *                      property="price",
+     *                      description="Цена",
+     *                      type="string",
+     *                   ),
+     *                  @OA\Property(
+     *                      property="photo",
+     *                      description="Фотография",
+     *                      type="file",
+     *                      @OA\Items(type="string", format="binary")
+     *                   ),
+     *               ),
+     *           ),
+     *       ),
+     *
+     *     @OA\Response(
+     *         response="200",
+     *         description="Товар добавлен",
+     *     ),
+     *     @OA\Response(
+     *         response="500",
+     *         description="Ошибка на стороне сервера"
+     *     )
+     * )
+     */
+    public function add(StoreItemRequest $request)
+    {
+        $dto = SaveItemDto::populateByArray($request->toArray());
+        // @todo-robert получать ткущего пользователя, когда будет авторизация
+        $user = 1;
+        $item = $this->service->addItemByUser($user, $dto);
+
+        return response()->success('Item was added',
+            [
+                'item' => $item->toArray()
+            ]);
     }
 }
