# Modules/Item/Dto/SaveItemDto.php
@@ -1,0 +1,15 @@
+<?php
+
+
+namespace Modules\Item\Dto;
+
+use App\Dto\Dto;
+
+class SaveItemDto extends Dto
+{
+    public $title;
+    public $desc;
+    public $price;
+    public $cat_id;
+    public $photo;
+}
