# Modules/Item/Models/Item.php
@@ -5,36 +5,15 @@ namespace Modules\Item\Models;
 
 use Illuminate\Database\Eloquent\Model;
 
-/**
- * @OA\Schema(
- *  schema="Item",
- *  @OA\Property(
- *      property="id",
- *      type="integer"
- *  ),
- *  @OA\Property(
- *      property="title",
- *      type="string"
- *  ),
- *  @OA\Property(
- *      property="decs",
- *      type="string"
- *  ),
- *  @OA\Property(
- *      property="price",
- *      type="decimal"
- *  ),
- *  @OA\Property(
- *      property="cat_id",
- *      type="integer"
- *  ),
- *  @OA\Property(
- *      property="user_id",
- *      type="integer"
- *  )
- * )
- */
 class Item extends Model
 {
     protected $table = 'item';
+    protected $fillable = [
+        'title',
+        'desc',
+        'price',
+        'photo_url',
+        'cat_id',
+        'user_id'
+    ];
 }
